--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- 最小宽度适配方案：https://github.com/wildma/ScreenAdaptation -->
+    <!-- 宽高限定符适配教程   https://www.jianshu.com/p/1302ad5a4b04-->
     <!-- Your custom size defind by references, can be writted in anywhere, any module, any values/*.xml, for example: -->
     <dimen name="common_margin">@dimen/dp_15</dimen>
 
